--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,18 @@
 *.njsproj
 *.sln
 *.sw?
+
+assets/*
+
+lightgalleryjs/*
+
+uploads/*
+
+*.php
+
+dbpurnadrive.sql
+admin.php
+delete.php
+form.php
+index.php
+upload.php
